--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -1,3 +1,6 @@
 @import "normalize.css";
 @import "fonts.scss";
+@import "mixins.scss";
 @import "style-greeting.scss";
+@import "style-webest.scss";
+@import "style-feedback.scss";
