--- a/CSS/_mixins.scss
+++ b/CSS/_mixins.scss
@@ -7,7 +7,19 @@
 
 @mixin wrap {
     min-height: 650px;
-    height: 100%;
+    height: 100vh;
     min-width: 1100px;
     width: 100%;
+}
+
+@mixin btn($bgcolor) {
+    background-color: $bgcolor;
+    border-radius: 5px;
+    width: 100px;
+    height: 38px;
+    text-align: center;
+    vertical-align: middle;
+    padding-top: 9px;
+    text-transform: uppercase;
+    font-family: ubuntumedium;
 }
