--- a/CSS/main.css
+++ b/CSS/main.css
@@ -61,11 +61,11 @@ a {
 
 .greet-bg {
   min-height: 650px;
-  height: 100%;
+  height: 100vh;
   min-width: 1100px;
   width: 100%;
-  background: url("../IMG/texture.png") repeat center center, black url("../IMG/video-bg.png") no-repeat center center;
-  background-size: auto, cover;
+  background: url("../IMG/texture.png") no-repeat center center, black url("../IMG/video-bg.png") no-repeat center center;
+  background-size: cover, cover;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -145,6 +145,7 @@ a {
   width: 100px;
   height: 38px;
   text-align: center;
+  vertical-align: middle;
   padding-top: 9px;
   text-transform: uppercase;
   font-family: ubuntumedium; }
@@ -228,11 +229,11 @@ a {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  margin-top: 50px; }
+  margin-top: 70px; }
 
 .webest-bg {
   min-height: 650px;
-  height: 100%;
+  height: 100vh;
   min-width: 1100px;
   width: 100%;
   background: url("../IMG2/cheese-dip.png") no-repeat left top, url("../IMG2/seeds.png") no-repeat left 30%, url("../IMG2/tomato-slices.png") no-repeat left bottom, url("../IMG2/tomato.png") no-repeat right bottom, url("../IMG2/cheese-lists.png") no-repeat right bottom, url("../IMG2/lettuce.png") no-repeat right center, url("../IMG2/wood.png") no-repeat;
@@ -298,3 +299,63 @@ a {
     font-family: ubuntulight;
     font-size: 14px;
     color: #6d6d6c; }
+
+.feedbacks {
+  background-color: #000000;
+  min-height: 650px;
+  height: 100vh;
+  min-width: 1100px;
+  width: 100%; }
+
+.opinion-container {
+  height: 650px;
+  width: 1100px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap; }
+
+.opinion__img {
+  width: 275px;
+  height: 325px;
+  position: relative; }
+
+.opinion__content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: #ffffff;
+  z-index: 3;
+  margin-left: 20px;
+  margin-top: 50px;
+  width: 225px; }
+
+.opinion__title {
+  font-family: gagalinregular;
+  font-size: 14px; }
+
+.opinion__text {
+  margin-top: 30px;
+  font-family: ubuntulight;
+  font-size: 14px; }
+
+.opinion_btn {
+  background-color: #2f3234;
+  border-radius: 5px;
+  width: 100px;
+  height: 38px;
+  text-align: center;
+  vertical-align: middle;
+  padding-top: 9px;
+  text-transform: uppercase;
+  font-family: ubuntumedium;
+  width: 113px;
+  font-size: 13px;
+  padding-top: 10px;
+  margin-top: 15px; }
+  .opinion_btn:hover {
+    background-color: #1f2122; }
