--- a/CSS/style-greeting.scss
+++ b/CSS/style-greeting.scss
@@ -24,9 +24,9 @@ a {
 
 .greet-bg {
     @include wrap;
-    background:  url("../IMG/texture.png") repeat center center,
+    background:  url("../IMG/texture.png") no-repeat center center,
     black url("../IMG/video-bg.png") no-repeat center center;
-    background-size: auto, cover;
+    background-size: cover, cover;
     display: flex;
     flex-direction: column;
     position: relative;
@@ -98,14 +98,7 @@ a {
 }
 
 .order-btn {
-    background-color: #e45028;
-    border-radius: 5px;
-    width: 100px;
-    height: 38px;
-    text-align: center;
-    padding-top: 9px;
-    text-transform: uppercase;
-    font-family: ubuntumedium;
+    @include btn(#e45028);
 
     a {
         color: #ffffff;
@@ -189,6 +182,6 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 50px;
+    margin-top: 70px;
 }
 
