--- a/CSS/main.css
+++ b/CSS/main.css
@@ -60,11 +60,9 @@ a {
   text-decoration: none; }
 
 .greet-bg {
-  min-height: 650px;
-  height: 100vh;
-  min-width: 1100px;
-  width: 100%;
-  background: url("../IMG/texture.png") no-repeat center center, black url("../IMG/video-bg.png") no-repeat center center;
+  height: 650px;
+  width: 1100px;
+  background: url("../IMG/texture.png") no-repeat center center, url("../IMG/texture.png") no-repeat center center, #000000 url("../IMG/video-bg.png") no-repeat center center;
   background-size: cover, cover;
   display: -webkit-box;
   display: -webkit-flex;
@@ -92,12 +90,15 @@ a {
   justify-content: flex-end;
   height: 81px; }
   .header-left {
-    margin-left: 77px; }
+    margin-left: 77px;
+    margin-top: 15px; }
   .header-middle {
-    margin-left: auto; }
+    margin-left: auto;
+    margin-top: 8px; }
   .header-right {
     margin-right: 79px;
-    margin-left: 13px; }
+    margin-left: 15px;
+    margin-top: 8px; }
 
 .logo__pic {
   width: 92px;
@@ -117,16 +118,12 @@ a {
   -ms-flex-align: center;
   align-items: center;
   font-family: ubuntumedium;
-  width: 625px;
+  width: 510px;
   text-transform: uppercase; }
 
 .navigation__item {
   display: block;
   position: relative; }
-  .navigation__item a {
-    color: #ffffff; }
-  .navigation__item:hover {
-    text-decoration: underline; }
   .navigation__item::after {
     position: absolute;
     content: "";
@@ -139,16 +136,23 @@ a {
   .navigation__item:last-child::after {
     display: none; }
 
+.navigation__link {
+  color: #ffffff;
+  font-size: 13px; }
+  .navigation__link:hover {
+    text-decoration: underline; }
+
 .order-btn {
   background-color: #e45028;
   border-radius: 5px;
-  width: 100px;
-  height: 38px;
+  width: 97px;
+  height: 35px;
   text-align: center;
   vertical-align: middle;
-  padding-top: 9px;
+  padding-top: 10px;
   text-transform: uppercase;
-  font-family: ubuntumedium; }
+  font-family: ubuntumedium;
+  font-size: 13px; }
   .order-btn a {
     color: #ffffff; }
   .order-btn:hover {
@@ -167,18 +171,23 @@ a {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center; }
+  .greeting__bg {
+    background: url(../IMG/drops.png) no-repeat 45px 60px;
+    width: 500px;
+    height: 420px;
+    margin-left: auto; }
   .greeting__image {
-    background: url("../IMG/drops.png") no-repeat center center;
-    width: 451px;
+    margin-left: 82px;
+    margin-top: -6px;
+    width: 414px;
     height: 420px; }
-    .greeting__image img {
-      margin-left: 25px;
-      width: 414px;
-      height: 420px; }
   .greeting__words {
     color: #ffffff;
-    margin-left: 13px;
-    width: 405px; }
+    width: 500px;
+    height: 420px;
+    margin-right: auto;
+    padding-left: 10px;
+    padding-top: 130px; }
     .greeting__words-gagalin {
       font-family: gagalinregular;
       font-size: 72px;
@@ -186,22 +195,25 @@ a {
       color: #f9b43b; }
     .greeting__words-lifehack {
       font-family: lifehackmedium;
-      font-size: 65px; }
+      font-size: 65px;
+      margin-top: 15px;
+      line-height: 100%;
+      letter-spacing: -1.8px; }
 
 .dots {
   position: absolute;
-  top: 88px;
-  right: 10px; }
+  top: 95px;
+  right: 55px; }
 
 .dots__list {
   margin-left: 30px; }
 
 .dots__item {
-  width: 9px;
-  height: 9px;
+  width: 5px;
+  height: 5px;
   background-color: #ffffff;
   border-radius: 50%;
-  margin-bottom: 12px;
+  margin-bottom: 16px;
   position: relative; }
   .dots__item:first-child::after {
     content: "";
@@ -211,8 +223,8 @@ a {
     height: 14px;
     border-radius: 50%;
     position: absolute;
-    right: -3px;
-    top: -3px; }
+    right: -6px;
+    top: -5px; }
   .dots__item:last-child {
     margin-bottom: 0px; }
 
@@ -229,14 +241,12 @@ a {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  margin-top: 70px; }
+  margin-top: 93px; }
 
 .webest-bg {
-  min-height: 650px;
-  height: 100vh;
-  min-width: 1100px;
-  width: 100%;
-  background: url("../IMG2/cheese-dip.png") no-repeat left top, url("../IMG2/seeds.png") no-repeat left 30%, url("../IMG2/tomato-slices.png") no-repeat left bottom, url("../IMG2/tomato.png") no-repeat right bottom, url("../IMG2/cheese-lists.png") no-repeat right bottom, url("../IMG2/lettuce.png") no-repeat right center, url("../IMG2/wood.png") no-repeat;
+  height: 650px;
+  width: 1100px;
+  background: url(../IMG2/cheese-dip.png) no-repeat left 25px, url(../IMG2/seeds.png) no-repeat left 190px, url(../IMG2/tomato-slices.png) no-repeat 56px bottom, url(../IMG2/tomato.png) no-repeat right bottom, url(../IMG2/cheese-lists.png) no-repeat right bottom, url(../IMG2/lettuce.png) no-repeat right 53px, url(../IMG2/wood.png) no-repeat;
   background-size: auto,auto,auto,auto,auto,auto, cover; }
 
 .webest-header {
@@ -256,7 +266,8 @@ a {
     font-family: gagalinregular;
     font-size: 72px;
     text-transform: uppercase;
-    color: #2f3234; }
+    color: #2f3234;
+    padding-top: 4px; }
 
 .webest-content {
   display: -webkit-box;
@@ -287,25 +298,27 @@ a {
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
-  align-items: center; }
+  align-items: center;
+  margin-left: 25px; }
+  .bestpoint:first-child {
+    margin-left: none; }
   .bestpoint__img {
     width: 100px;
     height: 100px; }
   .bestpoint__title {
     font-family: lifehackmedium;
     font-size: 24px;
-    color: #2f3234; }
-  .bestpoint p {
+    color: #2f3234;
+    margin-top: 0; }
+  .bestpoint__text p {
     font-family: ubuntulight;
     font-size: 14px;
     color: #6d6d6c; }
 
 .feedbacks {
   background-color: #000000;
-  min-height: 650px;
-  height: 100vh;
-  min-width: 1100px;
-  width: 100%; }
+  height: 650px;
+  width: 1100px; }
 
 .opinion-container {
   height: 650px;
@@ -339,21 +352,22 @@ a {
   font-size: 14px; }
 
 .opinion__text {
-  margin-top: 30px;
+  margin-top: 25px;
+  line-height: 167%;
   font-family: ubuntulight;
   font-size: 14px; }
 
 .opinion_btn {
   background-color: #2f3234;
   border-radius: 5px;
-  width: 100px;
-  height: 38px;
+  width: 97px;
+  height: 35px;
   text-align: center;
   vertical-align: middle;
-  padding-top: 9px;
+  padding-top: 10px;
   text-transform: uppercase;
   font-family: ubuntumedium;
-  width: 113px;
+  width: 110px;
   font-size: 13px;
   padding-top: 10px;
   margin-top: 15px; }
