--- a/CSS/style-webest.scss
+++ b/CSS/style-webest.scss
@@ -1,13 +1,13 @@
 .webest-bg {
     @include wrap;
-    background: 
-        url('../IMG2/cheese-dip.png') no-repeat left top,
-        url('../IMG2/seeds.png') no-repeat left 30%,
-        url('../IMG2/tomato-slices.png') no-repeat left bottom,
-        url('../IMG2/tomato.png') no-repeat right bottom,
-        url('../IMG2/cheese-lists.png') no-repeat right bottom,
-        url('../IMG2/lettuce.png') no-repeat right center,
-        url('../IMG2/wood.png') no-repeat;
+
+background: url(../IMG2/cheese-dip.png) no-repeat left 25px, 
+            url(../IMG2/seeds.png) no-repeat left 190px, 
+            url(../IMG2/tomato-slices.png) no-repeat 56px bottom, 
+            url(../IMG2/tomato.png) no-repeat right bottom, 
+            url(../IMG2/cheese-lists.png) no-repeat right bottom, 
+            url(../IMG2/lettuce.png) no-repeat right 53px, 
+            url(../IMG2/wood.png) no-repeat;
     background-size: auto,auto,auto,auto,auto,auto, cover;
 }
 
@@ -18,6 +18,7 @@
 
     &__words {
     @include gagalin(#2f3234);
+    padding-top: 4px;
     }
 }
 
@@ -33,6 +34,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-left: 25px;
+
+    &:first-child {
+        margin-left: none;
+    }
 
     
     &__img {
@@ -44,14 +50,17 @@
         font-family: lifehackmedium;
         font-size: 24px;
         color: #2f3234;
+        margin-top: 0;
     }
 
-    p {
-    font-family: ubuntulight;
-    font-size: 14px;
-    color: #6d6d6c
+    &__text {
+    
+    p { 
+        font-family: ubuntulight;
+        font-size: 14px;
+        color: #6d6d6c
+        }
     }
 }
-
 
 
