--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -1,6 +1,11 @@
 @import "normalize.css";
-@import "fonts.scss";
-@import "mixins.scss";
-@import "style-greeting.scss";
-@import "style-webest.scss";
-@import "style-feedback.scss";
+//config
+@import "config/mixins.scss";
+//layout
+@import "layout/fonts.scss";
+@import "layout/base.scss";
+@import "layout/adjustment.scss";
+//section-styles
+@import "section/style-greeting.scss";
+@import "section/style-webest.scss";
+@import "section/style-feedback.scss";
