--- a/CSS/section/style-feedback.scss
+++ b/CSS/section/style-feedback.scss
@@ -1,6 +1,5 @@
 .feedbacks {
     background-color: #000000;
-    @include wrap;
 }
 
 .opinion-container {
@@ -8,6 +7,7 @@
     width: 1100px;
     margin: 0 auto;
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
 }
 
@@ -24,7 +24,7 @@
     color: #ffffff;
     z-index: 3;
     margin-left: 20px;
-    margin-top: 50px;
+    margin-top: 30px;
     width: 225px;
 }
 
@@ -38,7 +38,6 @@
     line-height: 167%;
     font-family: ubuntulight;
     font-size: 14px;
-
 } 
 
 .opinion_btn {
