--- a/CSS/main.css
+++ b/CSS/main.css
@@ -394,13 +394,13 @@ a {
     margin-left: 0px; }
   .bestpoint__img {
     margin: 0 auto 20px; }
-    .bestpoint__img--meat {
+    .bestpoint__img_meat {
       width: 97px;
       height: 89px; }
-    .bestpoint__img--hand {
+    .bestpoint__img_hand {
       width: 73px;
       height: 85px; }
-    .bestpoint__img--natural {
+    .bestpoint__img_natural {
       width: 88px;
       height: 75px; }
   .bestpoint__title {
@@ -420,36 +420,108 @@ a {
   background-color: #000000; }
 
 .opinion-container {
-  height: 650px;
-  width: 1100px;
-  margin: 0 auto;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -webkit-flex-direction: row;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  -webkit-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap; }
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width: 100%;
+  min-width: 1100px;
+  height: 100%;
+  min-height: 650px; }
+
+.opinion {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  min-width: 1100px;
+  height: 50%;
+  min-height: 325px; }
 
 .opinion__img {
-  width: 275px;
-  height: 325px;
-  position: relative; }
+  min-width: 275px;
+  min-height: 325px;
+  position: relative;
+  -webkit-filter: grayscale(1);
+  filter: grayscale(1);
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1; }
+  .opinion__img_1 {
+    background-image: url("../IMG6/1x2.png");
+    background-size: cover; }
+  .opinion__img:hover .opinion__content {
+    display: block;
+    background-color: rgba(0, 0, 0, 0.5); }
+  .opinion__img_2 {
+    background-image: url("../IMG6/2x2.png");
+    background-size: cover; }
+  .opinion__img:hover .opinion__content {
+    display: block;
+    background-color: rgba(0, 0, 0, 0.5); }
+  .opinion__img_3 {
+    background-image: url("../IMG6/3x2.png");
+    background-size: cover; }
+  .opinion__img:hover .opinion__content {
+    display: block;
+    background-color: rgba(0, 0, 0, 0.5); }
+  .opinion__img_4 {
+    background-image: url("../IMG6/4x2.png");
+    background-size: cover; }
+  .opinion__img:hover .opinion__content {
+    display: block;
+    background-color: rgba(0, 0, 0, 0.5); }
+  .opinion__img_5 {
+    background-image: url("../IMG6/5x2.png");
+    background-size: cover; }
+  .opinion__img:hover .opinion__content {
+    display: block;
+    background-color: rgba(0, 0, 0, 0.5); }
+  .opinion__img_6 {
+    background-image: url("../IMG6/6x2.png");
+    background-size: cover; }
+  .opinion__img:hover .opinion__content {
+    display: block;
+    background-color: rgba(0, 0, 0, 0.5); }
+  .opinion__img_7 {
+    background-image: url("../IMG6/7x2.png");
+    background-size: cover; }
+  .opinion__img:hover .opinion__content {
+    display: block;
+    background-color: rgba(0, 0, 0, 0.5); }
+  .opinion__img_8 {
+    background-image: url("../IMG6/8x2.png");
+    background-size: cover; }
+  .opinion__img:hover .opinion__content {
+    display: block;
+    background-color: rgba(0, 0, 0, 0.5); }
 
 .opinion__content {
   position: absolute;
   top: 0;
   left: 0;
+  bottom: 0;
+  right: 0;
   color: #ffffff;
   z-index: 3;
-  margin-left: 20px;
-  margin-top: 30px;
-  width: 225px; }
+  padding-left: 20px;
+  padding-top: 30px;
+  display: none; }
 
 .opinion__title {
   font-family: gagalinregular;
