--- a/CSS/section/style-feedback.scss
+++ b/CSS/section/style-feedback.scss
@@ -3,29 +3,58 @@
 }
 
 .opinion-container {
-    height: 650px;
-    width: 1100px;
-    margin: 0 auto;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    min-width: 1100px;
+    height: 100%;
+    min-height: 650px;
 }
 
+.opinion {
+    display: flex;
+    width: 100%;
+    min-width: 1100px;
+    height: 50%;
+    min-height: 325px;
+}
+
+
 .opinion__img {
-    width: 275px;
-    height: 325px;
+    min-width: 275px;
+    min-height: 325px;
     position: relative;
+    filter: grayscale(1);
+    flex-grow: 1;
+
+    @each $number in 1, 2, 3, 4, 5, 6, 7, 8 {
+    &_#{$number} {
+        background-image: url('../IMG6/#{$number}x2.png');
+        background-size: cover;
+        }
+
+    &:hover {
+        .opinion__content {
+            display: block;
+            background-color: rgba(#000000, 0.5);
+            }
+        }
+    }
 }
 
 .opinion__content {
     position: absolute;
     top: 0;
     left: 0;
+    bottom: 0;
+    right: 0;
     color: #ffffff;
     z-index: 3;
-    margin-left: 20px;
-    margin-top: 30px;
-    width: 225px;
+    padding-left: 20px;
+    padding-top: 30px;
+    display: none;
 }
 
 .opinion__title {
