--- a/CSS/section/style-webest.scss
+++ b/CSS/section/style-webest.scss
@@ -49,17 +49,17 @@ background: url(../IMG2/cheese-dip.png) no-repeat left 25px,
     &__img {
         margin: 0 auto 20px;
 
-        &--meat {
+        &_meat {
             width: 97px;
             height: 89px;
         }
 
-        &--hand {
+        &_hand {
             width: 73px;
             height: 85px;
         }
 
-        &--natural {
+        &_natural {
             width: 88px;
             height: 75px;
         }
