--- a/CSS/main.css
+++ b/CSS/main.css
@@ -519,8 +519,7 @@ a {
   right: 0;
   color: #ffffff;
   z-index: 3;
-  padding-left: 20px;
-  padding-top: 30px;
+  padding: 30px 30px 30px 20px;
   display: none; }
 
 .opinion__title {
