--- a/CSS/section/style-feedback.scss
+++ b/CSS/section/style-feedback.scss
@@ -52,8 +52,7 @@
     right: 0;
     color: #ffffff;
     z-index: 3;
-    padding-left: 20px;
-    padding-top: 30px;
+    padding: 30px 30px 30px 20px;
     display: none;
 }
 
