added section team

--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -8,4 +8,6 @@
 //section-styles
 @import "section/style-greeting.scss";
 @import "section/style-webest.scss";
+@import "section/style-team.scss";
 @import "section/style-feedback.scss";
+
