--- a/CSS/main.css
+++ b/CSS/main.css
@@ -416,6 +416,102 @@ a {
       font-size: 14px;
       color: #6d6d6c; }
 
+.team-bg {
+  background: #000000 url("../IMG4/team-bg.png") no-repeat center center;
+  background-size: cover;
+  position: relative;
+  height: 100%;
+  width: 100%; }
+
+.teammates-bg {
+  min-height: 650px;
+  height: 100%;
+  min-width: 550px;
+  width: 50%;
+  margin-left: 50%;
+  background-color: rgba(0, 0, 0, 0.8); }
+
+.teammates {
+  position: absolute;
+  top: 90px;
+  left: 50%;
+  margin: 0px 80px;
+  bottom: 0;
+  right: 0; }
+
+.teammates__title {
+  display: block;
+  min-height: 130px;
+  font-family: gagalinregular;
+  font-size: 72px;
+  text-transform: uppercase;
+  color: #f9b43b;
+  font-weight: 400;
+  margin: 0;
+  vertical-align: middle; }
+
+.teammates__heading {
+  min-height: 45px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.teammates__icon {
+  margin-right: 10px;
+  height: 9px;
+  width: 12px; }
+
+.teammates__name {
+  margin: 0;
+  display: inline-block;
+  font-family: gagalinregular;
+  font-size: 14px;
+  color: #ffffff; }
+
+.teammates__desc {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 0px;
+  overflow: hidden; }
+
+.teammates__foto {
+  width: 40%;
+  height: 40%;
+  min-width: 105px;
+  min-height: 105px;
+  padding: 10px; }
+
+.teammates__text {
+  width: 60%;
+  min-width: 210px;
+  color: #ffffff;
+  font-size: 14px;
+  line-height: 24px;
+  font-family: ubuntulight;
+  padding: 10px 20px; }
+
+.teammates__job {
+  margin: 0;
+  font-family: ubuntubold;
+  font-size: 14px; }
+
+.teammates__trigger_active .teammates__icon {
+  -webkit-transform: scale(1, -1);
+  -ms-transform: scale(1, -1);
+  transform: scale(1, -1); }
+
+.teammates__trigger_active + .teammates__desc {
+  height: 23%;
+  min-height: 150px;
+  overflow: visible; }
+
 .feedbacks {
   background-color: #000000; }
 
