--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -9,5 +9,7 @@
 @import "section/style-greeting.scss";
 @import "section/style-webest.scss";
 @import "section/style-team.scss";
+@import "section/style-menu.scss";
 @import "section/style-feedback.scss";
+@import "section/style-map.scss"
 
