--- a/CSS/section/style-webest.scss
+++ b/CSS/section/style-webest.scss
@@ -52,16 +52,19 @@ background: url(../IMG2/cheese-dip.png) no-repeat left 25px,
         &_meat {
             width: 97px;
             height: 89px;
+            fill: #e25028;
         }
 
         &_hand {
             width: 73px;
             height: 85px;
+            fill: #f8b43a;
         }
 
         &_natural {
             width: 88px;
             height: 75px;
+            fill: #8ac03e;
         }
     }
 
