--- a/CSS/section/style-team.scss
+++ b/CSS/section/style-team.scss
@@ -91,6 +91,10 @@
         transform: scale(1, -1);
     }
 
+    .teammates__name {
+        color: #f9b43b;
+    }
+
     +.teammates__desc {
         height: 23%;
         min-height: 150px;
